--- a/PER/P2/P2_S3.ipynb
+++ b/PER/P2/P2_S3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "from sklearn.metrics import accuracy_score\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
@@ -25,9 +27,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joan/anaconda3/lib/python3.10/site-packages/sklearn/datasets/_openml.py:932: FutureWarning: The default value of `parser` will change from `'liac-arff'` to `'auto'` in 1.4. You can set `parser='auto'` to silence this warning. Therefore, an `ImportError` will be raised from 1.4 if the dataset is dense and pandas is not installed. Note that the pandas parser may return different data types. See the Notes Section in fetch_openml's API doc for details.\n",
+      "  warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(70000, 784)\n",
+      "(70000,)\n"
+     ]
+    }
+   ],
    "source": [
     "mnist = fetch_openml(\"mnist_784\")\n",
     "\n",
@@ -46,6 +65,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,11 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Partición de los datos"
+    "# Partición de los datos\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(data, targets, test_size = 0.2, random_state= 23)\n",
+    "\n",
+    "x_val, x_test, y_val, y_test = train_test_split(x_test, y_test, test_size = 0.5, random_state=23)\n"
    ]
   },
   {
@@ -87,11 +111,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Prueba el clasificador KNeighborsClassifier"
+    "kne = KNeighborsClassifier()\n",
+    "\n",
+    "kne.fit(x_train, y_train)\n",
+    "y_pred = kne.predict(x_val)\n",
+    "acc = accuracy_score(y_pred, y_val)\n",
+    "print(\"la precision es :\", acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la precision es : 0.9734285714285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Prueba el clasificador KNeighborsClassifier\n",
+    "\n",
+    "kne = KNeighborsClassifier()\n",
+    "\n",
+    "kne.fit(x_train, y_train)\n",
+    "y_pred = kne.predict(x_test)\n",
+    "acc = accuracy_score(y_pred, y_test)\n",
+    "print(\"la precision es :\", acc)"
    ]
   },
   {
@@ -106,11 +159,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la precision para 1 vecinos es : 0.9721428571428572\n",
+      "la precision para 2 vecinos es : 0.9672857142857143\n",
+      "la precision para 3 vecinos es : 0.9724285714285714\n",
+      "la precision para 4 vecinos es : 0.9711428571428572\n",
+      "la precision para 5 vecinos es : 0.9714285714285714\n",
+      "la precision para 6 vecinos es : 0.9724285714285714\n",
+      "la precision para 7 vecinos es : 0.9697142857142858\n",
+      "la precision para 8 vecinos es : 0.9681428571428572\n",
+      "la precision para 9 vecinos es : 0.9675714285714285\n",
+      "la precision para 10 vecinos es : 0.968\n",
+      "la precision para 20 vecinos es : 0.9605714285714285\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Estimar el mejor parámetro K con el conjunto de validación\n",
+    "\n",
+    "for i in [1,2,3,4,5,6,7,8,9,10,20]:    \n",
+    "    kne = KNeighborsClassifier(n_neighbors=i)\n",
+    "\n",
+    "    kne.fit(x_train, y_train)\n",
+    "    y_pred = kne.predict(x_val)\n",
+    "    acc = accuracy_score(y_pred, y_val)\n",
+    "    print(\"la precision para\", i,\"vecinos es :\", acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la precision para 6 vecinos es : 0.9731428571428572\n"
+     ]
+    }
+   ],
    "source": [
-    "## Estimar el mejor parámetro K con el conjunto de validación\n"
+    "## Obtener tasa de acierto con el conjunto de test para el mejor K\n",
+    "x_train_comp =np.concatenate((x_train, x_val), axis =0)\n",
+    "\n",
+    "y_train_comp = np.concatenate((y_train, y_val))\n",
+    "\n",
+    "kne = KNeighborsClassifier(n_neighbors=6 )\n",
+    "\n",
+    "kne.fit(x_train, y_train)\n",
+    "y_pred = kne.predict(x_test)\n",
+    "acc = accuracy_score(y_pred, y_test)\n",
+    "print(\"la precision para 6 vecinos es :\", acc)\n",
+    "\n"
    ]
   },
   {
@@ -134,11 +248,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Modifica la función de distancia \n",
+    "## x_test[0:100,:]\n",
+    "\n",
+    "def distancia(x,y):\n",
+    "    return np.sum(np.abs(x-y))\n",
+    "\n",
+    "kne = KNeighborsClassifier(n_neighbors=6, metric=distancia, n_jobs=4)\n",
+    "\n",
+    "kne.fit(x_train_comp, y_train_comp)\n",
+    "y_pred = kne.predict(x_test)\n",
+    "acc = accuracy_score(y_pred, y_test)\n",
+    "print(\"la precision para 6 vecinos es :\", acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Modifica la función de distancia"
+    "def distancia(x,y):\n",
+    "    return np.sum(np.abs(x-y))\n",
+    "\n",
+    "kv = KNeighborsClassifier(n_neighbors=3,metric=distancia,n_jobs=4)\n",
+    "kv.fit(x_train_comp,y_train_comp)\n",
+    "\n",
+    "print(\"predict\")\n",
+    "ypred = kv.predict(x_test[0:100,:])\n",
+    "acc = accuracy_score(y_test[0:100], ypred[0:100])\n",
+    "print(acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in [2,4,8,16,32,64]:\n",
+    "    for md in [3, 4, 6, 8, 10, 12]:\n",
+    "        \n",
+    "        clf = make_pipeline(PCA(n_components=n), KNeighborsClassifier(n_neighbors=md))\n",
+    "        \n",
+    "        clf.fit(x_train,y_train)\n",
+    "        ypred = clf.predict(x_val)\n",
+    "        acc = accuracy_score(y_val, ypred)\n",
+    "        print(acc)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_tr = np.concatenate((x_train, x_val))\n",
+    "targets_tr = ((y_train, y_val))\n",
+    "clf = make_pipeline(PCA(n_components=n), KNeighborsClassifier(n_neighbors=md))\n",
+    "\n",
+    "clf.fit(data_tr,targets_tr)\n",
+    "ypred = clf.predict(x_test)\n",
+    "acc = accuracy_score(y_test, ypred)\n",
+    "print(acc)"
    ]
   }
  ],
@@ -158,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
